syntax = "proto3";

package fr.upec.episen.mounir;

option java_multiple_files = true;
option java_package = "fr.upec.episen.mounir.proto";

service Owner{
  rpc GetOwnerName(OwnerNameRequest) returns (OwnerNameReply){}
}

message OwnerNameRequest{
  string identification= 1;
}

message OwnerNameReply{
  string name = 1;
}
